--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello</h1>
+  <div class="me">
+    <img src="/img/150x200_me.jpeg">
+  </div>
 </body>
 </html>
