--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <title>Document</title>
 </head>
 <body>
+  <nav class="navbar">
+    <ul>
+      <li><a href="https://github.com/wolfsige">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
+    </ul>
+  </nav>
   <div class="mediv">
     <img class="meimg" src="/img/20220326_192022_720.jpeg"">
   </div>
