--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="/app.js"></script>
   <link rel="stylesheet" href="/style.css">
-  <title>Document</title>
+  <title>Wolf's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
   <nav class="navbar">
