--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
-  <nav class="navbar">
-    <ul>
+  <nav>
+    <ul class="navbar">
       <li><a href="https://github.com/wolfsige">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
     </ul>
   </nav>
   <div class="mediv">
     <img class="meimg" src="/img/20220326_192022_720.jpeg"">
+  </div>
+  <div>
+    <h2></h2>
+    <ul>
+      <li></li>
+    </ul>
   </div>
 </body>
 </html>
