add class to nav bar li and change style.css to reflect

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 <body>
   <nav>
     <ul class="navbar">
-      <li><a href="https://github.com/wolfsige">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
+      <li class="link"><a href="https://github.com/wolfsige">GitHub</a></li>
+      <li class="link"><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
     </ul>
   </nav>
   <div class="mediv">
     <img class="meimg" src="/img/20220326_192022_720.jpeg"">
   </div>
   <div>
-    <h2></h2>
+    <h2>Skills:</h2>
     <ul>
-      <li></li>
+      <li>One</li>
+      <li>two</li>
+      <li>tree</li>
+      <li>four</li>
+      <li>five</li>
     </ul>
   </div>
 </body>
