--- a/index.html
+++ b/index.html
@@ -20,13 +20,29 @@
     <img class="meimg" src="/img/20220326_192022_720.jpeg"">
   </div>
   <div>
-    <h2>Skills:</h2>
+    <h2>Proficiencies:</h2>
     <ul>
-      <li>One</li>
-      <li>two</li>
-      <li>tree</li>
-      <li>four</li>
-      <li>five</li>
+      <h3>Languages:</h3>
+      <li>JavaScript</li>
+      <li>Python</li>
+      <li>PHP</li>
+      <li>CSS</li>
+      <li>HTML</li>
+    </ul>
+    <ul>
+      <h3>Skills:</h3>
+      <li>React</li>
+      <li>Node.js</li>
+      <li>Express.js</li>
+      <li>Flask</li>
+      <li>MongoDB</li>
+      <li>mySQL</li>
+      <li>GitHub</li>
+    </ul>
+    <ul>
+      <h3>Other:</h3>
+      <li>RESTful Routing</li>
+      <li>CRUD Operations</li>
     </ul>
   </div>
 </body>
