remove dots from proficiencies list

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div>
     <h2>Proficiencies:</h2>
-    <ul>
+    <ul class="prof">
       <h3>Languages:</h3>
       <li>JavaScript</li>
       <li>Python</li>
@@ -29,7 +29,7 @@
       <li>CSS</li>
       <li>HTML</li>
     </ul>
-    <ul>
+    <ul class="prof">
       <h3>Skills:</h3>
       <li>React</li>
       <li>Node.js</li>
@@ -39,7 +39,7 @@
       <li>mySQL</li>
       <li>GitHub</li>
     </ul>
-    <ul>
+    <ul class="prof">
       <h3>Other:</h3>
       <li>RESTful Routing</li>
       <li>CRUD Operations</li>
