add image to header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
       <li class="link"><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
     </ul>
   </nav>
-  <div class="mediv">
-    <img class="meimg" src="/img/20220326_192022_720.jpeg"">
-  </div>
+  <header class="head-style">
+    <div class="mediv">
+      <img class="meimg" src="/img/20220326_192022_720.jpeg"">
+    </div>
+  </header>
   <div>
     <h2>Proficiencies:</h2>
     <ul class="prof">
