add job title with drop shadow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </nav>
   <header class="head-style">
     <div class="mediv">
+      
       <img class="meimg" src="/img/20220326_192022_720.jpeg"">
+      <h2 class="job-title">Software Engineer</h2>
     </div>
   </header>
   <div>
