add links to project cards

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
       <div class="card-img img-1"></div>
       <h2>Title</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat vel repellat tempora odio id, earum accusamus molestiae doloribus cupiditate, eum rem tempore fugiat? Quasi repudiandae optio ratione, enim placeat debitis?</p>
-      <a href="">View on GitHub</a>
+      <a target="_blank" href="https://github.com/wolfsige/Dinner-with-death-project">View on GitHub</a>
     </div>
     <div class="card">
       <div class="card-img img-2"></div>
       <h2>Title</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, assumenda. Maiores cupiditate mollitia reprehenderit inventore, vero in doloremque. Quibusdam distinctio doloremque at deleniti voluptate provident harum, laboriosam veritatis placeat nam!</p>
-      <a href="">View on GitHub</a>
+      <a target="_blank" href="https://github.com/wolfsige/Meal-Preptopia">View on GitHub</a>
     </div>
     <div class="card">
       <div class="card-img img-3"></div>
       <h2>Title</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti ipsa nulla consequatur, facilis sint architecto, neque vel repudiandae est unde eum harum optio tempora asperiores excepturi, earum quam temporibus!</p>
-      <a href="">View on GitHub</a>
+      <a target="_blank" href="https://github.com/wolfsige/Wolf-Collector">View on GitHub</a>
     </div>
   </section>
 
