--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <nav>
     <ul class="navbar">
-      <li class="link"><a href="https://github.com/wolfsige">GitHub</a></li>
-      <li class="link"><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
+      <li class="link"><a target="_blank" href="https://github.com/wolfsige">GitHub</a></li>
+      <li class="link"><a target="_blank" href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
     </ul>
   </nav>
   <header class="head-style">
