add name to name bar and space-between

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 </head>
 <body>
   <nav>
-    <ul class="navbar">
-      <li class="link"><a target="_blank" href="https://github.com/wolfsige">GitHub</a></li>
-      <li class="link"><a target="_blank" href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
-    </ul>
+    <div class="navbar">
+      <p>Wolf</p>
+      <ul class="nav-links">
+        <li class="link"><a target="_blank" href="https://github.com/wolfsige">GitHub</a></li>
+        <li class="link"><a target="_blank" href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
+      </ul>
+  </div>
   </nav>
   <header class="head-style">
     <div class="mediv">
