--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
-  <nav>
-    <div class="navbar">
-      <p>Wolf</p>
-      <ul class="nav-links">
-        <li class="link"><a target="_blank" href="https://github.com/wolfsige">GitHub</a></li>
-        <li class="link"><a target="_blank" href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
-      </ul>
+  <div class="nav-bar">
+    <a href="#!" class="name">Wolf</a>
+    <ul class="nav-list">
+      <li class="nav-item link"><a href="" id="borderless">GitHub</a></li>
+      <li class="nav-item link"><a href="">LinkedIn</a></li>
+    </ul>
   </div>
-  </nav>
   <header class="head-style">
     <div class="mediv">
       
