add devicons for proficiencies

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/style.css">
   <title>Wolf's Portfolio</title>
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 <body>
   <div class="nav-bar">
@@ -28,21 +29,74 @@
     <h2>Proficiencies:</h2>
     <ul class="prof">
       <h3>Languages:</h3>
-      <li>JavaScript</li>
-      <li>Python</li>
-      <li>PHP</li>
-      <li>CSS</li>
-      <li>HTML</li>
+
+      <li>
+        <i class="devicon-javascript-plain colored"></i>
+
+        JavaScript
+      </li>
+
+      <li>
+        <i class="devicon-python-plain colored"></i>
+
+        Python
+      </li>
+
+      <li>
+        <i class="devicon-php-plain colored"></i>
+        PHP
+      </li>
+
+      <li>
+        <i class="devicon-css3-plain colored"></i>
+        CSS
+      </li>
+
+      <li>
+        <i class="devicon-html5-plain colored"></i>
+        HTML
+      </li>
+
     </ul>
     <ul class="prof">
       <h3>Skills:</h3>
-      <li>React</li>
-      <li>Node.js</li>
-      <li>Express.js</li>
-      <li>Flask</li>
-      <li>MongoDB</li>
-      <li>mySQL</li>
-      <li>GitHub</li>
+      
+      <li>
+        <i class="devicon-react-original colored"></i>
+        React
+      </li>
+
+      <li>
+        <i class="devicon-nodejs-plain colored"></i>
+        Node.js
+      </li>
+
+      <li>
+        <i class="devicon-express-original colored"></i>
+        Express.js
+      </li>
+
+      <li>
+        <i class="devicon-flask-original colored"></i>
+        Flask
+      </li>
+
+      <li>
+        <i class="devicon-mongodb-plain colored"></i>
+        MongoDB
+      </li>
+
+      <li>
+        <i class="devicon-mysql-plain colored"></i>
+        mySQL
+      </li>
+
+      <i class="devicon-git-plain colored"></i>
+        Git/
+      <i class="devicon-github-original colored"></i>
+        GitHub
+      </li>
+
     </ul>
     <ul class="prof">
       <h3>Other:</h3>
