add content to project cards

--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
   <section class="container">
     <div class="card">
       <div class="card-img img-1"></div>
-      <h2>Title</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat vel repellat tempora odio id, earum accusamus molestiae doloribus cupiditate, eum rem tempore fugiat? Quasi repudiandae optio ratione, enim placeat debitis?</p>
+      <h2>Dinner With Death</h2>
+      <p>You've Died! And Death is here to ask you some questions. Hopfully you did your homework! Made with JavaScript and HTML/CSS. Cycle through prompts and reply to Deaths questions. Maybe he will let you go if you get them all right.</p>
       <a target="_blank" href="https://github.com/wolfsige/Dinner-with-death-project">View on GitHub</a>
     </div>
     <div class="card">
       <div class="card-img img-2"></div>
-      <h2>Title</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, assumenda. Maiores cupiditate mollitia reprehenderit inventore, vero in doloremque. Quibusdam distinctio doloremque at deleniti voluptate provident harum, laboriosam veritatis placeat nam!</p>
+      <h2>Meal Preptopia</h2>
+      <p>A blog posting site to keep track of recipies that you and other people have made. Made with Node.js and MongoDB, create, read, update, and delete your recipies. With the aid of google OAuth and protected routes, Recipies that you create are safe from other people trying to delete them!</p>
       <a target="_blank" href="https://github.com/wolfsige/Meal-Preptopia">View on GitHub</a>
     </div>
     <div class="card">
       <div class="card-img img-3"></div>
-      <h2>Title</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti ipsa nulla consequatur, facilis sint architecto, neque vel repudiandae est unde eum harum optio tempora asperiores excepturi, earum quam temporibus!</p>
+      <h2>Wolf Collector</h2>
+      <p>A message board to keep track of your wolves. Give them a name and description! Made with Python and Flask, create, read, and delete "wolves" from the publicly viewable list. Never lose track of another pack member again!</p>
       <a target="_blank" href="https://github.com/wolfsige/Wolf-Collector">View on GitHub</a>
     </div>
   </section>
