--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   </header>
   <div>
-    <h2>Proficiencies:</h2>
+    <h1>Proficiencies:</h1>
     <ul class="prof">
       <h3>Languages:</h3>
 
@@ -101,6 +101,12 @@
       <li>RESTful Routing</li>
       <li>CRUD Operations</li>
     </ul>
+  </div>
+
+  <div>
+    <h1>
+      Projects:
+    </h1>
   </div>
 
   <section class="container">
