open nav links in new tab

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="nav-bar">
     <a href="#!" class="name">Wolf</a>
     <ul class="nav-list">
-      <li class="nav-item link"><a href="https://github.com/wolfsige" id="borderless">GitHub</a></li>
-      <li class="nav-item link"><a href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
+      <li class="nav-item link"><a target="_blank" href="https://github.com/wolfsige" id="borderless">GitHub</a></li>
+      <li class="nav-item link"><a target="_blank" href="https://www.linkedin.com/in/wolftripp/">LinkedIn</a></li>
     </ul>
   </div>
   <header class="head-style">
