update github links

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
     <div class="card">
       <div class="card-img img-2"></div>
       <h2>Meal Preptopia</h2>
-      <p>A blog posting site to keep track of recipies that you and other people have made. Made with Node.js and MongoDB, create, read, update, and delete your recipies. With the aid of google OAuth and protected routes, Recipies that you create are safe from other people trying to delete them!</p>
-      <a target="_blank" href="https://github.com/wolfsige/Meal-Preptopia">View on GitHub</a>
+      <p>A blog posting site to keep track of recipies that you and other people have made. Made with Node.js and MongoDB, create, read, update, and delete recipies.</p>
+      <a target="_blank" href="https://github.com/wolfsige/meal-preptopia-mk2">View on GitHub</a>
     </div>
     <div class="card">
       <div class="card-img img-3"></div>
       <h2>Wolf Collector</h2>
       <p>A message board to keep track of your wolves. Give them a name and description! Made with Python and Flask, create, read, and delete "wolves" from the publicly viewable list. Never lose track of another pack member again!</p>
-      <a target="_blank" href="https://github.com/wolfsige/Wolf-Collector">View on GitHub</a>
+      <a target="_blank" href="https://github.com/wolfsige/wolf_collector_mk2">View on GitHub</a>
     </div>
   </section>
 
